platform/devtools/vscodium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscodium
  namespace: devtools
spec:
  selector:
    app: vscodium
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
